# DataFastAPI

./: .elasticsearch.properties  .gitignore  .logstash.conf  .mongo.env  .post.env  Dockerfile  docker-compose.yml  mongodb  pyproject.toml  requirements.txt
.to-do/: to-do-list.md
dash/: dash_metricas.py
data/: base_clientes.csv  base_metricas_clientes.csv  novas_metricas_clientes_transformadas.csv  pandera_ecommerce.csv
datafastapi/: app.py
src/: contrato.py
src/etl/: carregar.py  extrair.py  transformar.py
tests/: testar_contrato_extraido.py  testar_contrato_original.py  testar_novo_contrato.py
to-do/: to-do-list.md
