[tool.poetry]
name = "datafastapi"
version = "0.1.0"
description = ""
authors = ["romilsonlonan <romilsonlonan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
fastapi = "^0.111.0"
pandas = "^2.2.2"
pandera = "^0.20.1"
pymongo = "^4.8.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
motor = "^3.5.0"
loguru = "^0.7.2"
git-lfs = "^1.6"
bfg = "^0.1.0"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
plotly-express = "^0.4.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pytest = "^8.2.2"
taskipy = "^1.13.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I','F','E','W','PL','PT']

[tool.taskipy.tasks]
run = 'fastapi dev datafastapi/app.py'
pre_test = 'task lint'
test = 'pytest --cov=datafastapi -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

